package com.rolex.microlabs.structural.facade;

/**
 * @author rolex
 * @since 2020
 */
public interface Government {

    void approve();

}
